--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tiptap/pm": "^2.5.8",
     "@tiptap/react": "^2.5.8",
     "@tiptap/starter-kit": "^2.5.8",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.2",
     "html-react-parser": "^5.1.12",
     "react": "^18.3.1",
@@ -52,6 +53,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@tailwindcss/typography": "^0.5.13",
+    "daisyui": "^4.12.10",
     "tailwindcss": "^3.4.7"
   }
 }
