--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@tiptap/extension-code-block-lowlight": "^2.5.8",
+    "@tiptap/extension-color": "^2.5.8",
+    "@tiptap/extension-text-style": "^2.5.8",
     "@tiptap/html": "^2.5.8",
     "@tiptap/pm": "^2.5.8",
     "@tiptap/react": "^2.5.8",
@@ -15,6 +18,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.3",
     "html-react-parser": "^5.1.12",
+    "lowlight": "2.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-crop": "^5.0.8",
