--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
-    "react-select": "^5.8.0",
+    "react-select": "^5.8.1",
+    "react-select-async-paginate": "^0.7.6",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
